fix jquery dialog z-index that was less than the map one (new leaflet)

--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,7 @@
     color: blue;
     text-decoration: underline;
 }
+/* jquery dialog */
+.ui-dialog{
+    z-index: 1001 !important ;
+}
